# servant-uverb

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  nixpkgs.json  shell.nix  stack-14.12.yaml  stack-15.4.yaml
example/: Main.hs
servant-uverb/: servant-uverb.cabal
servant-uverb-client/: servant-uverb-client.cabal
servant-uverb-mock/: servant-uverb-mock.cabal
servant-uverb-mock/src/Servant/Mock/: UVerb.hs
servant-uverb-server/: servant-uverb-server.cabal
servant-uverb-swagger/: servant-uverb-swagger.cabal
servant-uverb-swagger/src/Servant/Swagger/: UVerb.hs
servant-uverb/src/Servant/API/: UVerb.hs
