cabal-version:       2.2
name:                servant-uverb
version:             0.1
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/haskell-servant/servant-uverb
bug-reports:         https://github.com/haskell-servant/servant-uverb/issues
license:             AGPL-3.0-only
license-file:        LICENSE
author:              Arian van Putten, Matthias Fischmann, Nathan van Doorn
maintainer:          backend@wire.com
copyright:           (c) 2017 Wire Swiss GmbH
category:            Web
build-type:          Simple
extra-doc-files:     ../README.md, ../CHANGELOG.md
tested-with:         GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/haskell-servant/servant-uverb.git

common standard-things
  build-depends:       base >= 4.12.0.0 && < 4.14
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wno-star-is-type
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DataKinds
                       DeriveFunctor
                       DeriveGeneric
                       DerivingStrategies
                       DerivingVia
                       DuplicateRecordFields
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeOperators
                       TypeFamilies
                       UndecidableInstances
                       ViewPatterns

library
  import:              standard-things
  hs-source-dirs:      src
  exposed-modules:     Servant.API.UVerb,
                       Servant.API.UVerb.OpenUnion

  build-depends:       http-types ^>= 0.12.3,
                       servant ^>= 0.16,
                       sop-core >= 0.4.0.0 && < 0.6,

test-suite servant-uverb-test
  import:              standard-things
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       servant-uverb
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
